src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_processing_with_previous_result.snap
---
source: src/app/app_render.rs
expression: output
---
"┌⠹ String ─────────────────────────────────────────────────────────────────────┐"
"│"Alice"                                                                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ─────────────────────────────── Press Ctrl+A for AI Assistant ┐"
"│.age                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | ↑/Ctrl+R: History | Enter: Output Result | "
